--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@
   <a href="https://ytsejammaxpower.github.io/baralho_cigano/">Descrição do Baralho Cigano</a> |
   <a href="https://ytsejammaxpower.github.io/runas/">Descrição das Runas</a> |
   <a href="https://ytsejammaxpower.github.io/numerologia/">Numerologia básica</a> |
+  <a href="https://ytsejammaxpower.github.io/astro/">Astrologia básica</a> |
+  <a href="https://ytsejammaxpower.github.io/estatistica_astrologia/">Estatística para Astrologia</a> |
   <a href="https://ytsejammaxpower.github.io/uso">Como usar o Tarot e as Runas</a> |
   <a href="https://ytsejammaxpower.github.io/biblia">Bíblia</a> |
   <a href="https://ytsejammaxpower.github.io/loja_virtual/">Loja Virtual</a>
